// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with data state, custom icon 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__vertical iot--card--wrapper"
      data-testid="Card"
      id="myStoryId"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Health score"
        >
          <div
            className="iot--card--title--text"
          >
            Health score
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper iot--value-card__content-wrapper--vertical"
        >
          <div
            className="iot--data-state-container"
            style={
              Object {
                "--container-padding": "16px",
              }
            }
          >
            <p
              className="iot--data-state-dashes"
            >
              --
            </p>
            <div
              className="iot--data-state-grid"
            >
              <div
                aria-labelledby="iot--data-state-grid__icon-myStoryId"
                className="bx--tooltip__label"
                id="iot--data-state-grid__icon-myStoryId"
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  className="iot--data-state-default-warning-icon"
                  fill="currentColor"
                  focusable="false"
                  height={24}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,1C5.9,1,1,5.9,1,12s4.9,11,11,11s11-4.9,11-11C23,5.9,18.1,1,12,1z M11.1,6h1.8v8h-1.8V6z M12,19.2	c-0.7,0-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2s1.2,0.6,1.2,1.2S12.7,19.2,12,19.2z"
                  />
                  <path
                    d="M13.2,18c0,0.7-0.6,1.2-1.2,1.2s-1.2-0.6-1.2-1.2s0.6-1.2,1.2-1.2S13.2,17.3,13.2,18z M12.9,6	h-1.8v8h1.8V6z"
                    data-icon-path="inner-path"
                    fill="none"
                    opacity="0"
                  />
                </svg>
              </div>
              <div
                aria-labelledby="iot--data-state-grid__label-myStoryId"
                className="bx--tooltip__label"
                id="iot--data-state-grid__label-myStoryId"
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <span
                  className="iot--data-state-grid__label"
                >
                  No data available for this score at this time
                </span>
              </div>
              <div
                aria-labelledby="iot--data-state-grid__description-myStoryId"
                className="bx--tooltip__label"
                id="iot--data-state-grid__description-myStoryId"
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <p
                  className="iot--data-state-grid__description"
                >
                  The last successful score was 68 at 13:21 - 10/21/2019 but wait, there is more, according to the latest test results this line is too long.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "150vh",
        }
      }
    />
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with dataFilters 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__vertical iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Facility Conditions per device"
        >
          <div
            className="iot--card--title--text"
          >
            Facility Conditions per device
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper iot--value-card__content-wrapper--vertical"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Device 1 Comfort
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  100
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-1-threshold-label"
              >
                Device 2 Comfort
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  50
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-1-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with five data points 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__vertical iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Facility Conditions"
        >
          <div
            className="iot--card--title--text"
          >
            Facility Conditions
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper iot--value-card__content-wrapper--vertical"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Comfort Level
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  89
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-1-threshold-label"
              >
                Average Temperature
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  76.7
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-1-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                ˚F
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-2-threshold-label"
              >
                Utilization
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  76
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-2-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-3-threshold-label"
              >
                Humidity
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  50
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-3-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-4-threshold-label"
              >
                Air Flow
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  0.567
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-4-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with four data points 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__horizontal iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Status"
        >
          <div
            className="iot--card--title--text"
          >
            Status
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "25%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Status
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  Good
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "25%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-1-threshold-label"
              >
                Comfort level
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  Healthy
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-1-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "25%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-2-threshold-label"
              >
                Occupancy
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  None
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-2-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "25%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-3-threshold-label"
              >
                Humidity
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  Unbearable
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-3-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with isEditable 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__vertical iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Really really really long card title?"
        >
          <div
            className="iot--card--title--text"
          >
            Really really really long card title?
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper iot--value-card__content-wrapper--vertical"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Monthly summary
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  --
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                Wh
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-1-threshold-label"
              >
                Yearly summary
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  --
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-1-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                Wh
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with long text and no units 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__horizontal iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Tagpath"
        >
          <div
            className="iot--card--title--text"
          >
            Tagpath
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Tagpath
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  rutherford/rooms/northadd/ah2/ft_supflow/eurutherford/rooms/northadd/ah2/ft_supflow/eu
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with long text, no units, no click handler 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__horizontal iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Tagpath"
        >
          <div
            className="iot--card--title--text"
          >
            Tagpath
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Tagpath
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <span
                  className="iot--value-card__value-renderer--value"
                  data-testid="Card-attribute-0-value"
                  style={
                    Object {
                      "--value-renderer-color": null,
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                >
                  rutherford/rooms/northadd/ah2/ft_supflow/eurutherford/rooms/northadd/ah2/ft_supflow/eu
                </span>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with six data points 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__vertical iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "624px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Facility Conditions"
        >
          <div
            className="iot--card--title--text"
          >
            Facility Conditions
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "576px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper iot--value-card__content-wrapper--vertical"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Comfort Level
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  89
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-1-threshold-label"
              >
                Average Temperature
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  76.7
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-1-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                ˚F
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-2-threshold-label"
              >
                Utilization
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  76
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-2-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-3-threshold-label"
              >
                CPU
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  76
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-3-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-4-threshold-label"
              >
                Humidity
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  76
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-4-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-5-threshold-label"
              >
                Location
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  Australia
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-5-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-6-threshold-label"
              >
                Air quality
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  76
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-6-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with three data points and thresholds 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__vertical iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "304px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Facility Conditions"
        >
          <div
            className="iot--card--title--text"
          >
            Facility Conditions
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "256px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper iot--value-card__content-wrapper--vertical"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <svg
                aria-label="> 80"
                data-testid="Card-attribute-0-threshold-icon"
                fill="#F00"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="> 80"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.875,11h2.25V21h-2.25ZM16,27a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,27Z"
                  fill="none"
                />
                <path
                  d="M29.8872,28.5386l-13-25a1,1,0,0,0-1.7744,0l-13,25A1,1,0,0,0,3,30H29a1,1,0,0,0,.8872-1.4614ZM14.875,11h2.25V21h-2.25ZM16,27a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,27Z"
                />
              </svg>
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Comfort Level
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  345,678,234,234,234,240
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                %
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <svg
                aria-label="> 80"
                data-testid="Card-attribute-1-threshold-icon"
                fill="#F00"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="> 80"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.875,11h2.25V21h-2.25ZM16,27a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,27Z"
                  fill="none"
                />
                <path
                  d="M29.8872,28.5386l-13-25a1,1,0,0,0-1.7744,0l-13,25A1,1,0,0,0,3,30H29a1,1,0,0,0,.8872-1.4614ZM14.875,11h2.25V21h-2.25ZM16,27a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,27Z"
                />
              </svg>
              <span
                data-testid="Card-attribute-1-threshold-label"
              >
                Average Temperature
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  456,778,234,234,234,240.0
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-1-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                ˚F
              </span>
            </div>
          </div>
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--vertical"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <svg
                aria-label="> 80"
                data-testid="Card-attribute-2-threshold-icon"
                fill="#F00"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="> 80"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.875,11h2.25V21h-2.25ZM16,27a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,27Z"
                  fill="none"
                />
                <path
                  d="M29.8872,28.5386l-13-25a1,1,0,0,0-1.7744,0l-13,25A1,1,0,0,0,3,30H29a1,1,0,0,0,.8872-1.4614ZM14.875,11h2.25V21h-2.25ZM16,27a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,27Z"
                />
              </svg>
              <span
                data-testid="Card-attribute-2-threshold-label"
              >
                Humidity
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--value-card__value-renderer--value--vertical iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  88,888,678,234,234,240,000.0
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-2-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                ˚F
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with thresholds (string) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "520px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__horizontal iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Status"
        >
          <div
            className="iot--card--title--text"
          >
            Status
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <svg
                aria-label="= Unhealthy"
                data-testid="Card-attribute-0-threshold-icon"
                fill="red"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="= Unhealthy"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M10.7,11.5L8,8.8l-2.7,2.7l-0.8-0.8L7.2,8L4.5,5.3l0.8-0.8L8,7.2	l2.7-2.7l0.8,0.8L8.8,8l2.7,2.7L10.7,11.5z"
                />
              </svg>
              <span
                data-testid="Card-attribute-0-threshold-label"
              />
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  Unhealthy
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with thresholds, custom icon renderer, and custom formatter 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__horizontal iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Alert Count"
        >
          <div
            className="iot--card--title--text"
          >
            Alert Count
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <svg
                data-testid="Card-attribute-0-threshold-icon"
                fill="green"
                focusable="true"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                tabIndex="0"
                title="> 5"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
                />
                <title>
                  &gt; 5
                </title>
              </svg>
              <span
                data-testid="Card-attribute-0-threshold-label"
              />
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  70
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/ValueCard with trends, variables, and label 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1rem4",
        "width": "252px",
      }
    }
  >
    <div
      className="iot--card iot--value-card__horizontal iot--card--wrapper"
      data-testid="Card"
      id="facilitycard"
      role="presentation"
      style={
        Object {
          "--card-default-height": "144px",
        }
      }
    >
      <div
        className="iot--card--header"
        data-testid="Card-header"
      >
        <span
          className="iot--card--title"
          data-testid="Card-title"
          title="Foot Traffic - working"
        >
          <div
            className="iot--card--title--text"
          >
            Foot Traffic - working
          </div>
        </span>
      </div>
      <div
        className="iot--card--content"
        data-testid="Card-content"
        style={
          Object {
            "--card-content-height": "96px",
          }
        }
      >
        <div
          className="iot--value-card__content-wrapper"
        >
          <div
            className="iot--value-card__attribute-wrapper iot--value-card__attribute-wrapper--horizontal"
            style={
              Object {
                "--value-card-attribute-width": "100%",
              }
            }
          >
            <div
              className="iot--value-card__attribute-label"
            >
              <span
                data-testid="Card-attribute-0-threshold-label"
              >
                Walkers
              </span>
            </div>
            <div
              className="iot--value-card__attribute"
            >
              <div
                className="iot--value-card__value-renderer--wrapper"
              >
                <button
                  aria-describedby={null}
                  aria-pressed={null}
                  className="iot--value-card__value-renderer--value iot--btn bx--btn bx--btn--ghost"
                  data-testid="Button"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "--value-renderer-color": "#0f62fe",
                      "--value-renderer-font-size": "42px",
                      "--value-renderer-max-lines": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  13,572
                </button>
              </div>
              <span
                className="iot--value-card__attribute-unit"
                data-testid="Card-attribute-0-unit"
                style={
                  Object {
                    "--default-font-size": "1.25rem",
                  }
                }
              >
                
              </span>
            </div>
            <div
              className="iot--value-card__attribute-secondary-value"
              data-testid="Card-attribute-0-secondary-value"
              style={
                Object {
                  "--secondary-value-color": "red",
                }
              }
            >
              <svg
                aria-label="trending down"
                className="iot--value-card__attribute_trend-icon"
                data-testid="Card-attribute-0-trending-down"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 12L16 22 8 12z"
                />
              </svg>
              22%
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
